update license and author field

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "url": "git+https://github.com/a-b-r-o-w-n/add-pr-owner-action.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "abrown.d.ts@gmail.com",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/a-b-r-o-w-n/add-pr-owner-action/issues"
   },
