--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/a-b-r-o-w-n/add-pr-owner-action#readme",
   "devDependencies": {
     "@octokit/types": "^6.1.1",
+    "@types/lodash.chunk": "^4.2.6",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "@vercel/ncc": "^0.25.1",
@@ -35,6 +36,8 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
+    "@octokit/rest": "^18.0.12",
+    "lodash.chunk": "^4.2.0",
     "tslib": "^1.14.1"
   }
 }
